Features/CarrierOnBoarding/force-app/main/default/objects/FreightTM__Carrier__c/fields/Agreement_File_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Agreement_File_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement_File_Uploaded</label>
    <type>Checkbox</type>
</CustomField>