Features/CarrierOnBoarding/force-app/main/default/objects/FreightTM__Carrier__c/fields/Agreement_Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Signed_By__c</fullName>
    <label>Agreement_Signed_By</label>
    <length>250</length>
    <type>Text</type>
</CustomField>