Features/CarrierOnBoarding/force-app/main/default/objects/FreightTM__Carrier__c/fields/Agreement_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Signed_Date__c</fullName>
    <label>Agreement_Signed_Date</label>
    <type>DateTime</type>
</CustomField>