Features/CarrierOnBoarding/force-app/main/default/objects/FreightTM__Carrier__c/fields/Broker_Carrier_Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Broker_Carrier_Agreement_Status__c</fullName>
    <label>Broker_Carrier_Agreement_Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing</fullName>
            </value>
            <value>
                <fullName>Uploaded</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>