Features/CarrierOnBoarding/force-app/main/default/objects/FreightTM__Carrier__c/fields/MC_Authority_File_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>MC_Authority_File_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC_Authority_File_Uploaded</label>
    <type>Checkbox</type>
</CustomField>