Features/CarrierOnBoarding/force-app/main/default/objects/FreightTM__Carrier__c/fields/Onboarding_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Submitted_Date__c</fullName>
    <label>Onboarding_Submitted_Date</label>
    <type>DateTime</type>
</CustomField>