Features/CarrierOnBoarding/force-app/main/default/objects/FreightTM__Carrier__c/fields/Overall_Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Compliance_Status__c</fullName>
    <label>Overall_Compliance_Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing Info</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Compliant</fullName>
            </value>
            <value>
                <fullName>Non-Compliant</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>