Features/CarrierOnBoarding/force-app/main/default/objects/FreightTM__Carrier__c/fields/Public_Onboarding_Access__c.field-meta.xml
<CustomField>
    <fullName>Public_Onboarding_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public_Onboarding_Access</label>
    <type>Checkbox</type>
</CustomField>