Features/CarrierOnBoarding/force-app/main/default/objects/FreightTM__Carrier__c/fields/Ready_for_Loads__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Loads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready_for_Loads</label>
    <type>Checkbox</type>
</CustomField>