Features/CarrierOnBoarding/force-app/main/default/objects/FreightTM__Carrier__c/fields/W_9_File_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>W_9_File_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>W_9_File_Uploaded</label>
    <type>Checkbox</type>
</CustomField>